<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddTymerActivity">

    <EditText
        android:id="@+id/aname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_marginBottom="10dp">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/alen1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_len"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:enabled="true"
            android:editable="true"
            >
        </EditText>

        <EditText
            android:id="@+id/arep1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_rep"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:editable="true"
            android:enabled="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/h2"
        android:visibility="gone">

        <EditText
            android:id="@+id/alen2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_len"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:enabled="true"
            android:editable="true"
            android:text="@string/hLen" />

        <EditText
            android:id="@+id/arep2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_rep"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:editable="true"
            android:enabled="true"
            android:text="@string/hRep" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:id="@+id/h3">

        <EditText
            android:id="@+id/alen3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_len"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:enabled="true"
            android:editable="true"
            android:text="@string/hLen" />

        <EditText
            android:id="@+id/arep3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_rep"
            android:inputType="time"
            android:minLines="1"
            android:numeric="integer"
            android:editable="true"
            android:enabled="true"
            android:text="@string/hRep" />
    </LinearLayout>

    <EditText
        android:id="@+id/asound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:minLines="1"
        android:visibility="gone" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_asound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ring"
            android:ems="7"
            android:background="@drawable/abc_menu_dropdown_panel_holo_light" />

        <Button
            android:id="@+id/btn_addrep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_add"
            android:enabled="true"
            android:ems="7"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/abc_menu_dropdown_panel_holo_light" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_addtimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_record"
        android:ems="14"
        android:background="@drawable/abc_menu_dropdown_panel_holo_light" />

</LinearLayout>